--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,44 @@
-<h1>Hello i am from index file</h1>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
+<!-------heading tag-->
+
+    <h1>heading</h1>
+    <h2>heading</h2>
+    <h3>heading</h3>
+    <h4>heading</h4>
+    <h5>heading</h5>
+    <h6>heading</h6>
+
+<!----Paragraph tag-->
+<p>hallo, guten Morgen, wei geth es ehnen !</p>
+
+
+<!----Img Tag-->
+<img src="https://www.patterns.dev/img/reactjs/react-logo@3x.svg" alt="logo" height="400" width="600">
+
+
+<a href="https://www.amazon.in/" target="_blank">Click me !</a>
+
+<a href="./About.html" target="_blank">About</a>
+
+<a href="https://www.amazon.in/" target="_blank">
+    <img src="https://www.patterns.dev/img/reactjs/react-logo@3x.svg" alt="logo" height="400" width="600">
+</a>
+    
+</body>
+
+
+
+
+
+<script src="javascript.js"></script>
+</html>
